--- a/books_many_to_many/flask_app/templates/books_show.html
+++ b/books_many_to_many/flask_app/templates/books_show.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
-    <!-- Above is how we link our style sheet. url_for creates a url based on the static folder, and file name given -->
-    <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}" defer></script>
-    <!-- Above is how we link our JS file. Make sure that you understand why we use defer -->
+    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
     <title>Document</title>
 </head>
 <body>
