--- a/books_many_to_many/flask_app/templates/authors_show.html
+++ b/books_many_to_many/flask_app/templates/authors_show.html
@@ -13,7 +13,38 @@
             <div class="col">
                 <p class="h1">{{one_author.name}}'s Favorites</p>
             </div>
-        
+        </div>
+        <div class="row">
+            <table class="table">
+                <thead>
+                    <th scope="col">Title</th>
+                    <th scope="col">Page Count</th>
+                </thead>
+                <tbody>
+                    <!-- {% for book in one_author.favorites %}
+                    <tr>
+                        <td>{{book.title}}</td>
+                        <td>{{book.num_of_pages}}</td>
+                    </tr>
+                    {% endfor %} -->
+                </tbody>
+            </table>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p class="h1">Add New Favorite</p>
+            </div>
+            <!-- <div class="col">
+                <form action="/author/add_favorite">
+                    <div class="input-group">
+                        <select>
+                            {% for book in one_author.all_books %}
+                            <option value="{{book.id}}">{{book.title}}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </form>
+            </div> -->
         </div>
     </main>
 </body>
