--- a/books_many_to_many/flask_app/templates/test.html
+++ b/books_many_to_many/flask_app/templates/test.html
@@ -21,12 +21,12 @@
                     <th scope="col">Page Count</th>
                 </thead>
                 <tbody>
-                    {% for book in one_author.favorites %}
+                {% for book in one_author.favorites %}
                     <tr>
                         <td>{{book.title}}</td>
                         <td>{{book.num_of_pages}}</td>
                     </tr>
-                    {% endfor %}
+                {% endfor %}
                 </tbody>
             </table>
         </div>
@@ -38,7 +38,9 @@
                 <form action="/author/add_favorite">
                     <div class="input-group">
                         <select>
-                            
+                            {% for book in all_books %}
+                            <option value="{{book.id}}">{{book.title}}</option>
+                            {% endfor %}
                         </select>
                     </div>
                 </form>
